--- a/global/prometheus/templates/deployment.yaml
+++ b/global/prometheus/templates/deployment.yaml
@@ -33,6 +33,9 @@ spec:
             - --web.enable-admin-api
             - --web.enable-lifecycle
             - --log.level={{ default "info" .Values.log_level }}
+            {{- if semverCompare ">=v2.6.0" .Values.image.tag }}
+            - --web.page-title=Prometheus GLOBAL
+            {{- end }}
           ports:
             - name: http 
               containerPort: 9090
