--- a/openstack/ironic/templates/conductors-kq.yaml
+++ b/openstack/ironic/templates/conductors-kq.yaml
@@ -13,6 +13,7 @@ python: |
     bm = bmclient.get_client(1, session=os.session, os_ironic_api_version='1.46')
 
     blocks = dict()
+    nodes = list()
 
     def append_item(d, k, v):
         if k is None or v is None:
@@ -26,7 +27,8 @@ python: |
                 vs += ',' + v
 
     for node in bm.node.list(
-            fields=['name','driver','properties',
+            fields=['uuid', 'name','driver','properties','conductor_group',
+                    'resource_class','provision_state','maintenance',
                     'management_interface','inspect_interface','raid_interface',
                     'storage_interface','boot_interface','vendor_interface',
                     'network_interface','power_interface','rescue_interface',
@@ -45,11 +47,12 @@ python: |
         append_item(default, 'enabled_hardware_types', node.driver)
         node = node.to_dict()
 
+        nodes.append(node)
+
         for k in node:
             if k.endswith('_interface'):
                 enabled = 'enabled_' + k + 's'
                 append_item(default, enabled, node[k])
-
 
     blocks = blocks.values()
 {{- end  }}
