[ironic] Only set conductor group, if unset

--- a/openstack/ironic/templates/migrate-nodes-kq.yaml
+++ b/openstack/ironic/templates/migrate-nodes-kq.yaml
@@ -52,8 +52,8 @@ python: |
             patch = [{"op": "replace", "path": "/resource_class", "value": flavor}]
 
         block_name = name.split('-')[-1]
-        if node.get('conductor_group') != block_name:
-            LOG.info("%s: Group '%s' -> '%s'", name, node['conductor_group'], block_name)
+        if not node.get('conductor_group'):
+            LOG.info("%s: Group -> '%s'", name, node['conductor_group'], block_name)
             patch = [{"op": "replace", "path": "/conductor_group", "value": block_name}]
 
         if patch:
