[keystone] create more meaningful timing metrics

--- a/openstack/keystone/templates/configmap-etc.yaml
+++ b/openstack/keystone/templates/configmap-etc.yaml
@@ -31,4 +31,6 @@ data:
 {{- if .Values.watcher.enabled }}
   watcher.yaml: |
 {{ include (print .Template.BasePath "/etc/_watcher.yaml.tpl") . | indent 4 }}
+  statsd_exporter_mapping.yaml: |
+{{ include (print .Template.BasePath "/etc/_statsd_exporter_mapping.yaml.tpl") . | indent 4 }}
 {{- end }}
