[neutron] Add neutron tempest domain seeds.

--- a/openstack/neutron/templates/seed.yaml
+++ b/openstack/neutron/templates/seed.yaml
@@ -519,3 +519,265 @@ spec:
       - domain: wbs
         role: network_viewer
         inherited: true
+
+{{- if or (eq .Values.global.region "staging") (eq .Values.global.region "qa-de-1") }}
+{{- if .Values.tempest.enabled }}
+  
+  - name: tempest
+    projects:
+    - name: neutron-tempest-admin
+      description: Tempest Admin Test Project 1
+      roles:
+      - user: admin@Default
+        role: cloud_network_admin
+    - name: neutron-tempest1
+      description: Tempest Test Project 1
+      roles:
+      - user: admin@Default
+        role: cloud_network_admin
+    - name: neutron-tempest2
+      description: Tempest Test Project 2
+      roles:
+      - user: admin@Default
+        role: cloud_network_admin
+    - name: neutron-tempest3
+      description: Tempest Test Project 3
+      roles:
+      - user: admin@Default
+        role: cloud_network_admin
+    - name: neutron-tempest4
+      description: Tempest Test Project 4
+      roles:
+      - user: admin@Default
+        role: cloud_network_admin
+    - name: neutron-tempest5
+      description: Tempest Test Project 5
+      roles:
+      - user: admin@Default
+        role: cloud_network_admin
+    - name: neutron-tempest6
+      description: Tempest Test Project 6
+      roles:
+      - user: admin@Default
+        role: cloud_network_admin
+    - name: neutron-tempest7
+      description: Tempest Test Project 7
+      roles:
+      - user: admin@Default
+        role: cloud_network_admin
+    - name: neutron-tempest8
+      description: Tempest Test Project 8
+      roles:
+      - user: admin@Default
+        role: cloud_network_admin
+    users:
+    - name: neutron-tempestadmin
+      description: Neutron Admin Tempest User
+      password: {{ .Values.tempestAdminPassword | quote }}
+      roles:
+      - project: neutron-tempest-admin
+        role: admin
+      - project: neutron-tempest-admin
+        role: network_admin
+      - project: neutron-tempest-admin
+        role: compute_admin
+      - project: neutron-tempest-admin
+        role: cloud_network_admin
+      - project: neutron-tempest1
+        role: member
+      - project: neutron-tempest1
+        role: network_admin
+      - project: neutron-tempest1
+        role: compute_admin
+      - project: neutron-tempest1
+        role: cloud_network_admin
+      - project: neutron-tempest2
+        role: member
+      - project: neutron-tempest2
+        role: network_admin
+      - project: neutron-tempest2
+        role: compute_admin
+      - project: neutron-tempest2
+        role: cloud_network_admin
+      - project: neutron-tempest3
+        role: member
+      - project: neutron-tempest3
+        role: network_admin
+      - project: neutron-tempest3
+        role: compute_admin
+      - project: neutron-tempest3
+        role: cloud_network_admin
+      - project: neutron-tempest4
+        role: member
+      - project: neutron-tempest4
+        role: network_admin
+      - project: neutron-tempest4
+        role: compute_admin
+      - project: neutron-tempest4
+        role: cloud_network_admin
+      - project: neutron-tempest5
+        role: member
+      - project: neutron-tempest5
+        role: network_admin
+      - project: neutron-tempest5
+        role: compute_admin
+      - project: neutron-tempest5
+        role: cloud_network_admin
+      - project: neutron-tempest6
+        role: member
+      - project: neutron-tempest6
+        role: network_admin
+      - project: neutron-tempest6
+        role: compute_admin
+      - project: neutron-tempest6
+        role: cloud_network_admin
+      - project: neutron-tempest7
+        role: member
+      - project: neutron-tempest7
+        role: network_admin
+      - project: neutron-tempest7
+        role: compute_admin
+      - project: neutron-tempest7
+        role: cloud_network_admin
+      - project: neutron-tempest8
+        role: member
+      - project: neutron-tempest8
+        role: network_admin
+      - project: neutron-tempest8
+        role: compute_admin
+      - project: neutron-tempest8
+        role: cloud_network_admin
+      - domain: tempest
+        role: network_admin
+      - domain: tempest
+        role: cloud_network_admin
+    - name: neutron-tempestuser1
+      description: Neutron Tempest Test User 1
+      password: {{ .Values.tempestAdminPassword | quote }}
+      roles:
+      - project: neutron-tempest1
+        role: admin
+      - project: neutron-tempest1
+        role: network_admin
+      - project: neutron-tempest1
+        role: compute_admin
+      - project: neutron-tempest1
+        role: cloud_network_admin
+      - domain: tempest
+        role: network_admin
+      - domain: tempest
+        role: cloud_network_admin
+    - name: neutron-tempestuser2
+      description: Neutron Tempest Test User 2
+      password: {{ .Values.tempestAdminPassword | quote }}
+      roles:
+      - project: neutron-tempest2
+        role: admin
+      - project: neutron-tempest2
+        role: network_admin
+      - project: neutron-tempest2
+        role: compute_admin
+      - project: neutron-tempest2
+        role: cloud_network_admin
+      - domain: tempest
+        role: network_admin
+      - domain: tempest
+        role: cloud_network_admin
+    - name: neutron-tempestuser3
+      description: Neutron Tempest Test User 3
+      password: {{ .Values.tempestAdminPassword | quote }}
+      roles:
+      - project: neutron-tempest3
+        role: admin
+      - project: neutron-tempest3
+        role: network_admin
+      - project: neutron-tempest3
+        role: compute_admin
+      - project: neutron-tempest3
+        role: cloud_network_admin
+      - domain: tempest
+        role: network_admin
+      - domain: tempest
+        role: cloud_network_admin
+    - name: neutron-tempestuser4
+      description: Neutron Tempest Test User 4
+      password: {{ .Values.tempestAdminPassword | quote }}
+      roles:
+      - project: neutron-tempest4
+        role: admin
+      - project: neutron-tempest4
+        role: network_admin
+      - project: neutron-tempest4
+        role: compute_admin
+      - project: neutron-tempest4
+        role: cloud_network_admin
+      - domain: tempest
+        role: network_admin
+      - domain: tempest
+        role: cloud_network_admin
+    - name: neutron-tempestuser5
+      description: Neutron Tempest Test User 5
+      password: {{ .Values.tempestAdminPassword | quote }}
+      roles:
+      - project: neutron-tempest5
+        role: admin
+      - project: neutron-tempest5
+        role: network_admin
+      - project: neutron-tempest5
+        role: compute_admin
+      - project: neutron-tempest5
+        role: cloud_network_admin
+      - domain: tempest
+        role: network_admin
+      - domain: tempest
+        role: cloud_network_admin
+    - name: neutron-tempestuser6
+      description: Neutron Tempest Test User 6
+      password: {{ .Values.tempestAdminPassword | quote }}
+      roles:
+      - project: neutron-tempest6
+        role: admin
+      - project: neutron-tempest6
+        role: network_admin
+      - project: neutron-tempest6
+        role: compute_admin
+      - project: neutron-tempest6
+        role: cloud_network_admin
+      - domain: tempest
+        role: network_admin
+      - domain: tempest
+        role: cloud_network_admin
+    - name: neutron-tempestuser7
+      description: Neutron Tempest Test User 7
+      password: {{ .Values.tempestAdminPassword | quote }}
+      roles:
+      - project: neutron-tempest7
+        role: admin
+      - project: neutron-tempest7
+        role: network_admin
+      - project: neutron-tempest7
+        role: compute_admin
+      - project: neutron-tempest7
+        role: cloud_network_admin
+      - domain: tempest
+        role: network_admin
+      - domain: tempest
+        role: cloud_network_admin
+    - name: neutron-tempestuser8
+      description: Neutron Tempest Test User 8
+      password: {{ .Values.tempestAdminPassword | quote }}
+      roles:
+      - project: neutron-tempest8
+        role: admin
+      - project: neutron-tempest8
+        role: network_admin
+      - project: neutron-tempest8
+        role: compute_admin
+      - project: neutron-tempest8
+        role: cloud_network_admin
+      - domain: tempest
+        role: network_admin
+      - domain: tempest
+        role: cloud_network_admin
+{{- end }}
+{{- end }}
