netbox discovery in ipmi-service-discovery

--- a/system/kube-monitoring/values.yaml
+++ b/system/kube-monitoring/values.yaml
@@ -16,6 +16,9 @@ global:
   ipmi_service_discovery:
     enabled: false
     configmap_name: ipmi-sd
+    netbox:
+      enabled: false
+      api_token: DEFINED-IN-SECRETS
 
   ipmi_exporter:
     enabled: false
