[hermes] decouple pvc size and retention

--- a/openstack/hermes/templates/elasticsearch-pvclaim.yaml
+++ b/openstack/hermes/templates/elasticsearch-pvclaim.yaml
@@ -11,4 +11,4 @@ spec:
   resources:
     requests:
       # size storage so that the retention kicks in at 70% of capacity consumption
-      storage: {{ div (mul .Values.hermes_elasticsearch_data_retention 100) 70 -}}Gi
+      storage: {{.Values.elasticsearch_pv_size}}Gi
