--- a/openstack/hermes/values.yaml
+++ b/openstack/hermes/values.yaml
@@ -15,6 +15,11 @@ hermes:
 logstash:
   debug: false
 
+# the elasticsearch disk is 100g, a bit less will be the filesystem and 70g should be below 80% where we would alert
+# Current value get's multipled, and divided to create the volume size. 
+hermes_elasticsearch_data_retention: DEFINED-IN-REGION-SECRETS
+elasticsearch_pv_size: 92
+
 image_version_hermes_kibana: DEFINED-IN-REGION-SECRETS
 hermes_kibana_port_public: '5601'
 deploy_kibana: false # true in staging values
