--- a/global/prometheus-alertmanager/templates/config.yaml
+++ b/global/prometheus-alertmanager/templates/config.yaml
@@ -76,9 +76,9 @@ data:
       - receiver: slack_vmware_critical
         continue: true
         match_re:
-          tier: vmware
           severity: critical
           region: admin|ap-ae-1|ap-au-1|ap-cn-1|ap-jp-1|ap-jp-2|ap-sa-1|eu-de-1|eu-de-2|eu-nl-1|eu-ru-1|la-br-1|na-ca-1|na-us-1|na-us-3
+          service: vcenter
 
       - receiver: slack_by_tier_and_severity
         continue: true
@@ -105,6 +105,13 @@ data:
         continue: false
         match_re:
           cluster_type: kubernikus-controlplane
+
+      - receiver: slack_api_critical
+        continue: true
+        match_re:
+          severity: critical
+          region: ap-ae-1|ap-au-1|ap-cn-1|ap-jp-1|ap-jp-2|ap-sa-1|eu-de-1|eu-de-2|eu-nl-1|eu-ru-1|la-br-1|na-ca-1|na-us-1|na-us-3
+          tier: os|k8s
 
       - receiver: pagerduty_network
         continue: false
@@ -203,62 +210,26 @@ data:
     - name: slack_os_critical
       slack_configs:
         - channel: '#alert-{{"{{ .CommonLabels.tier }}"}}-{{"{{ .CommonLabels.severity }}"}}'
-          api_url: {{ default "MISSING" .Values.slack.openstack_critical_webhook_url | quote }}
+          api_url: {{ default "MISSING" .Values.slack.webhook_url | quote }}
           username: "Control Plane"
           title: {{"'{{template \"slack.sapcc.title\" . }}'"}}
           title_link: {{"'{{template \"slack.sapcc.titlelink\" . }}'"}}
           text: {{"'{{template \"slack.sapcc.text\" . }}'"}}
           pretext: {{"'{{template \"slack.sapcc.pretext\" . }}'"}}
           icon_emoji: {{"'{{template \"slack.sapcc.iconemoji\" . }}'"}}
-          callback_id: "alertmanager"
           send_resolved: true
-          actions:
-            - name: {{"'{{template \"slack.sapcc.actionName\" . }}'"}}
-              type: {{"'{{template \"slack.sapcc.actionType\" . }}'"}}
-              text: {{"'{{template \"slack.sapcc.acknowledge.actionText\" . }}'"}}
-              value: {{"'{{template \"slack.sapcc.acknowledge.actionValue\" . }}'"}}
-            - name: {{"'{{template \"slack.sapcc.actionName\" . }}'"}}
-              type: {{"'{{template \"slack.sapcc.actionType\" . }}'"}}
-              text: {{"'{{template \"slack.sapcc.silence1Day.actionText\" . }}'"}}
-              value: {{"'{{template \"slack.sapcc.silence1Day.actionValue\" . }}'"}}
-            - name: {{"'{{template \"slack.sapcc.actionName\" . }}'"}}
-              type: {{"'{{template \"slack.sapcc.actionType\" . }}'"}}
-              text: {{"'{{template \"slack.sapcc.silenceUntilMonday.actionText\" . }}'"}}
-              value: {{"'{{template \"slack.sapcc.silenceUntilMonday.actionValue\" . }}'"}}
-            - name: {{"'{{template \"slack.sapcc.actionName\" . }}'"}}
-              type: {{"'{{template \"slack.sapcc.actionType\" . }}'"}}
-              text: {{"'{{template \"slack.sapcc.silence1Month.actionText\" . }}'"}}
-              value: {{"'{{template \"slack.sapcc.silence1Month.actionValue\" . }}'"}}
 
     - name: slack_k8s_critical
       slack_configs:
         - channel: '#alert-{{"{{ .CommonLabels.tier }}"}}-{{"{{ .CommonLabels.severity }}"}}'
-          api_url: {{ default "MISSING" .Values.slack.kubernetes_critical_webhook_url | quote }}
+          api_url: {{ default "MISSING" .Values.slack.webhook_url | quote }}
           username: "Control Plane"
           title: {{"'{{template \"slack.sapcc.title\" . }}'"}}
           title_link: {{"'{{template \"slack.sapcc.titlelink\" . }}'"}}
           text: {{"'{{template \"slack.sapcc.text\" . }}'"}}
           pretext: {{"'{{template \"slack.sapcc.pretext\" . }}'"}}
           icon_emoji: {{"'{{template \"slack.sapcc.iconemoji\" . }}'"}}
-          callback_id: "alertmanager"
           send_resolved: true
-          actions:
-            - name: {{"'{{template \"slack.sapcc.actionName\" . }}'"}}
-              type: {{"'{{template \"slack.sapcc.actionType\" . }}'"}}
-              text: {{"'{{template \"slack.sapcc.acknowledge.actionText\" . }}'"}}
-              value: {{"'{{template \"slack.sapcc.acknowledge.actionValue\" . }}'"}}
-            - name: {{"'{{template \"slack.sapcc.actionName\" . }}'"}}
-              type: {{"'{{template \"slack.sapcc.actionType\" . }}'"}}
-              text: {{"'{{template \"slack.sapcc.silence1Day.actionText\" . }}'"}}
-              value: {{"'{{template \"slack.sapcc.silence1Day.actionValue\" . }}'"}}
-            - name: {{"'{{template \"slack.sapcc.actionName\" . }}'"}}
-              type: {{"'{{template \"slack.sapcc.actionType\" . }}'"}}
-              text: {{"'{{template \"slack.sapcc.silenceUntilMonday.actionText\" . }}'"}}
-              value: {{"'{{template \"slack.sapcc.silenceUntilMonday.actionValue\" . }}'"}}
-            - name: {{"'{{template \"slack.sapcc.actionName\" . }}'"}}
-              type: {{"'{{template \"slack.sapcc.actionType\" . }}'"}}
-              text: {{"'{{template \"slack.sapcc.silence1Month.actionText\" . }}'"}}
-              value: {{"'{{template \"slack.sapcc.silence1Month.actionValue\" . }}'"}}
 
     - name: slack_kks_critical
       slack_configs:
@@ -385,6 +356,36 @@ data:
           pretext: {{"'{{template \"slack.sapcc.pretext\" . }}'"}}
           icon_emoji: {{"'{{template \"slack.sapcc.iconemoji\" . }}'"}}
           send_resolved: true
+
+    - name: slack_api_critical
+      slack_configs:
+        - channel: '#alert-{{"{{ .CommonLabels.tier }}"}}-{{"{{ .CommonLabels.severity }}"}}'
+          api_url: {{ default "MISSING" .Values.slack.api_critical_webhook_url | quote }}
+          username: "Control Plane"
+          title: {{"'{{template \"slack.sapcc.title\" . }}'"}}
+          title_link: {{"'{{template \"slack.sapcc.titlelink\" . }}'"}}
+          text: {{"'{{template \"slack.sapcc.text\" . }}'"}}
+          pretext: {{"'{{template \"slack.sapcc.pretext\" . }}'"}}
+          icon_emoji: {{"'{{template \"slack.sapcc.iconemoji\" . }}'"}}
+          callback_id: "alertmanager"
+          send_resolved: true
+          actions:
+            - name: {{"'{{template \"slack.sapcc.actionName\" . }}'"}}
+              type: {{"'{{template \"slack.sapcc.actionType\" . }}'"}}
+              text: {{"'{{template \"slack.sapcc.acknowledge.actionText\" . }}'"}}
+              value: {{"'{{template \"slack.sapcc.acknowledge.actionValue\" . }}'"}}
+            - name: {{"'{{template \"slack.sapcc.actionName\" . }}'"}}
+              type: {{"'{{template \"slack.sapcc.actionType\" . }}'"}}
+              text: {{"'{{template \"slack.sapcc.silence1Day.actionText\" . }}'"}}
+              value: {{"'{{template \"slack.sapcc.silence1Day.actionValue\" . }}'"}}
+            - name: {{"'{{template \"slack.sapcc.actionName\" . }}'"}}
+              type: {{"'{{template \"slack.sapcc.actionType\" . }}'"}}
+              text: {{"'{{template \"slack.sapcc.silenceUntilMonday.actionText\" . }}'"}}
+              value: {{"'{{template \"slack.sapcc.silenceUntilMonday.actionValue\" . }}'"}}
+            - name: {{"'{{template \"slack.sapcc.actionName\" . }}'"}}
+              type: {{"'{{template \"slack.sapcc.actionType\" . }}'"}}
+              text: {{"'{{template \"slack.sapcc.silence1Month.actionText\" . }}'"}}
+              value: {{"'{{template \"slack.sapcc.silence1Month.actionValue\" . }}'"}
 
     - name: pagerduty
       pagerduty_configs:
