--- a/global/prometheus-alertmanager/templates/config.yaml
+++ b/global/prometheus-alertmanager/templates/config.yaml
@@ -385,7 +385,7 @@ data:
             - name: {{"'{{template \"slack.sapcc.actionName\" . }}'"}}
               type: {{"'{{template \"slack.sapcc.actionType\" . }}'"}}
               text: {{"'{{template \"slack.sapcc.silence1Month.actionText\" . }}'"}}
-              value: {{"'{{template \"slack.sapcc.silence1Month.actionValue\" . }}'"}
+              value: {{"'{{template \"slack.sapcc.silence1Month.actionValue\" . }}'"}}
 
     - name: pagerduty
       pagerduty_configs:
