[neutron] Add tempest flag in values.

--- a/openstack/neutron/values.yaml
+++ b/openstack/neutron/values.yaml
@@ -332,3 +332,9 @@ nanny:
     interval: 60
     # really delete entities after how many iterations
     iterations: 3
+
+unittest:
+  enabled: false
+tempest:
+  imageTag: latest
+  enabled: false
