--- a/global/prometheus-alertmanager/templates/config.yaml
+++ b/global/prometheus-alertmanager/templates/config.yaml
@@ -76,9 +76,9 @@ data:
       - receiver: slack_vmware_critical
         continue: true
         match_re:
+          tier: vmware
           severity: critical
           region: admin|ap-ae-1|ap-au-1|ap-cn-1|ap-jp-1|ap-jp-2|ap-sa-1|eu-de-1|eu-de-2|eu-nl-1|eu-ru-1|la-br-1|na-ca-1|na-us-1|na-us-3
-          service: vcenter
 
       - receiver: slack_by_tier_and_severity
         continue: true
