[neutron] Added user role in os seeds.

--- a/openstack/neutron/templates/seed.yaml
+++ b/openstack/neutron/templates/seed.yaml
@@ -526,47 +526,47 @@ spec:
   - name: tempest
     projects:
     - name: neutron-tempest-admin
-      description: Tempest Admin Test Project 1
+      description: Neutron Tempest Admin Test Project 1
       roles:
       - user: admin@Default
         role: cloud_network_admin
     - name: neutron-tempest1
-      description: Tempest Test Project 1
+      description: Neutron Tempest Test Project 1
       roles:
       - user: admin@Default
         role: cloud_network_admin
     - name: neutron-tempest2
-      description: Tempest Test Project 2
+      description: Neutron Tempest Test Project 2
       roles:
       - user: admin@Default
         role: cloud_network_admin
     - name: neutron-tempest3
-      description: Tempest Test Project 3
+      description: Neutron Tempest Test Project 3
       roles:
       - user: admin@Default
         role: cloud_network_admin
     - name: neutron-tempest4
-      description: Tempest Test Project 4
+      description: Neutron Tempest Test Project 4
       roles:
       - user: admin@Default
         role: cloud_network_admin
     - name: neutron-tempest5
-      description: Tempest Test Project 5
+      description: Neutron Tempest Test Project 5
       roles:
       - user: admin@Default
         role: cloud_network_admin
     - name: neutron-tempest6
-      description: Tempest Test Project 6
+      description: Neutron Tempest Test Project 6
       roles:
       - user: admin@Default
         role: cloud_network_admin
     - name: neutron-tempest7
-      description: Tempest Test Project 7
+      description: Neutron Tempest Test Project 7
       roles:
       - user: admin@Default
         role: cloud_network_admin
     - name: neutron-tempest8
-      description: Tempest Test Project 8
+      description: Neutron Tempest Test Project 8
       roles:
       - user: admin@Default
         role: cloud_network_admin
@@ -661,6 +661,8 @@ spec:
         role: network_admin
       - project: neutron-tempest1
         role: compute_admin
+      - project: neutron-tempest1
+        role: member
       - domain: tempest
         role: network_admin
       - domain: tempest
@@ -675,6 +677,8 @@ spec:
         role: network_admin
       - project: neutron-tempest2
         role: compute_admin
+      - project: neutron-tempest2
+        role: member
       - domain: tempest
         role: network_admin
       - domain: tempest
@@ -689,6 +693,8 @@ spec:
         role: network_admin
       - project: neutron-tempest3
         role: compute_admin
+      - project: neutron-tempest3
+        role: member
       - domain: tempest
         role: network_admin
       - domain: tempest
@@ -703,6 +709,8 @@ spec:
         role: network_admin
       - project: neutron-tempest4
         role: compute_admin
+      - project: neutron-tempest4
+        role: member
       - domain: tempest
         role: network_admin
       - domain: tempest
@@ -717,6 +725,8 @@ spec:
         role: network_admin
       - project: neutron-tempest5
         role: compute_admin
+      - project: neutron-tempest5
+        role: member
       - domain: tempest
         role: network_admin
       - domain: tempest
@@ -731,6 +741,8 @@ spec:
         role: network_admin
       - project: neutron-tempest6
         role: compute_admin
+      - project: neutron-tempest6
+        role: member
       - domain: tempest
         role: network_admin
       - domain: tempest
@@ -745,6 +757,8 @@ spec:
         role: network_admin
       - project: neutron-tempest7
         role: compute_admin
+      - project: neutron-tempest7
+        role: member
       - domain: tempest
         role: network_admin
       - domain: tempest
@@ -759,6 +773,8 @@ spec:
         role: network_admin
       - project: neutron-tempest8
         role: compute_admin
+      - project: neutron-tempest8
+        role: member
       - domain: tempest
         role: network_admin
       - domain: tempest
