[memcached] update to 1.5.12 & recent prom exporter

--- a/common/memcached/values.yaml
+++ b/common/memcached/values.yaml
@@ -2,7 +2,7 @@
 ## ref: https://hub.docker.com/r/library/memcached/tags/
 ##
 image: memcached
-imageTag: 1.5.10-alpine
+imageTag: 1.5.12-alpine
 
 ## Specify a imagePullPolicy
 ## 'Always' if imageTag is 'latest', else set to 'IfNotPresent'
@@ -35,7 +35,7 @@ resources:
 metrics:
   enabled: true
   image: 'prom/memcached-exporter'
-  imageTag: 'master'
+  imageTag: 'v0.5.0'
 
   port: '9150'
   resources:
