[neutron] Adapted user role in os seeds.

--- a/openstack/neutron/templates/seed.yaml
+++ b/openstack/neutron/templates/seed.yaml
@@ -647,10 +647,10 @@ spec:
         role: compute_admin
       - project: neutron-tempest8
         role: cloud_network_admin
-      - domain: tempest
-        role: network_admin
-      - domain: tempest
-        role: cloud_network_admin
+      - project: tempest1
+        role: image_viewer
+      - project: tempest2
+        role: image_viewer
     - name: neutron-tempestuser1
       description: Neutron Tempest Test User 1
       password: {{ .Values.tempestAdminPassword | quote }}
@@ -663,10 +663,6 @@ spec:
         role: compute_admin
       - project: neutron-tempest1
         role: member
-      - domain: tempest
-        role: network_admin
-      - domain: tempest
-        role: cloud_network_admin
     - name: neutron-tempestuser2
       description: Neutron Tempest Test User 2
       password: {{ .Values.tempestAdminPassword | quote }}
@@ -679,10 +675,6 @@ spec:
         role: compute_admin
       - project: neutron-tempest2
         role: member
-      - domain: tempest
-        role: network_admin
-      - domain: tempest
-        role: cloud_network_admin
     - name: neutron-tempestuser3
       description: Neutron Tempest Test User 3
       password: {{ .Values.tempestAdminPassword | quote }}
@@ -695,10 +687,6 @@ spec:
         role: compute_admin
       - project: neutron-tempest3
         role: member
-      - domain: tempest
-        role: network_admin
-      - domain: tempest
-        role: cloud_network_admin
     - name: neutron-tempestuser4
       description: Neutron Tempest Test User 4
       password: {{ .Values.tempestAdminPassword | quote }}
@@ -711,10 +699,6 @@ spec:
         role: compute_admin
       - project: neutron-tempest4
         role: member
-      - domain: tempest
-        role: network_admin
-      - domain: tempest
-        role: cloud_network_admin
     - name: neutron-tempestuser5
       description: Neutron Tempest Test User 5
       password: {{ .Values.tempestAdminPassword | quote }}
@@ -727,10 +711,6 @@ spec:
         role: compute_admin
       - project: neutron-tempest5
         role: member
-      - domain: tempest
-        role: network_admin
-      - domain: tempest
-        role: cloud_network_admin
     - name: neutron-tempestuser6
       description: Neutron Tempest Test User 6
       password: {{ .Values.tempestAdminPassword | quote }}
@@ -743,10 +723,6 @@ spec:
         role: compute_admin
       - project: neutron-tempest6
         role: member
-      - domain: tempest
-        role: network_admin
-      - domain: tempest
-        role: cloud_network_admin
     - name: neutron-tempestuser7
       description: Neutron Tempest Test User 7
       password: {{ .Values.tempestAdminPassword | quote }}
@@ -759,10 +735,6 @@ spec:
         role: compute_admin
       - project: neutron-tempest7
         role: member
-      - domain: tempest
-        role: network_admin
-      - domain: tempest
-        role: cloud_network_admin
     - name: neutron-tempestuser8
       description: Neutron Tempest Test User 8
       password: {{ .Values.tempestAdminPassword | quote }}
@@ -775,9 +747,5 @@ spec:
         role: compute_admin
       - project: neutron-tempest8
         role: member
-      - domain: tempest
-        role: network_admin
-      - domain: tempest
-        role: cloud_network_admin
 {{- end }}
 {{- end }}
