mammoth resource requests

--- a/system/kube-monitoring/charts/prometheus-frontend/templates/deployment.yaml
+++ b/system/kube-monitoring/charts/prometheus-frontend/templates/deployment.yaml
@@ -47,6 +47,10 @@ spec:
               mountPath: /prometheus
             - name: config
               mountPath: /etc/prometheus
+          resources:
+            requests:
+              cpu: 12
+              memory: 40Gi
         - name: prometheus-configmap-reloader
           image: "{{ .Values.global.configmap_reload.image.repository }}:{{ .Values.global.configmap_reload.image.tag }}"
           args:
