--- a/system/kube-monitoring/charts/prometheus-collector/templates/deployment.yaml
+++ b/system/kube-monitoring/charts/prometheus-collector/templates/deployment.yaml
@@ -34,6 +34,10 @@ spec:
             {{- if semverCompare ">=v2.6.0" .Values.global.prometheus.tag }}
             - --web.page-title=Prometheus Collector {{ .Values.global.region | upper }}
             {{- end }}
+          resources:
+            requests:
+              cpu: 12
+              memory: 40Gi
           ports:
             - name: http
               containerPort: 9090
