--- a/openstack/keystone/templates/secret-fernet.yaml
+++ b/openstack/keystone/templates/secret-fernet.yaml
@@ -4,6 +4,7 @@
 {{- end -}}
 {{- end -}}
 
+#{{- if .Release.IsInstall }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -18,7 +19,7 @@ metadata:
   annotations:
     max_active_keys: {{ .Values.api.fernet.maxActiveKeys | default "3" | quote }}
     # only create once and never touch again, since it should be rotated via cli
-    #"helm.sh/hook": post-upgrade
-    #"helm.sh/hook": pre-install
+    #"helm.sh/hook": pre-install, post-upgrade
 data:
 {{ include "fernet" . | indent 4 }}
+#{{- end -}}
