[keystone] unconditional install of secrets

--- a/openstack/keystone/templates/secret-credential-keys.yaml
+++ b/openstack/keystone/templates/secret-credential-keys.yaml
@@ -3,7 +3,6 @@
 {{  $i }}: {{ $secret | println }}
 {{- end -}}
 {{- end -}}
-#{{- if .Release.IsInstall }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -15,9 +14,8 @@ metadata:
     heritage: "{{ .Release.Service }}"
     component: keystone
     type: config
-  annotations:
+  #annotations:
     # only create once and never touch again, since it should be rotated via cli
     #"helm.sh/hook": pre-install, post-upgrade
 data:
 {{ include "credential" . | indent 4 }}
-#{{- end -}}
