[hermes] add request resources to hermes pods

--- a/openstack/hermes/templates/api-deployment.yaml
+++ b/openstack/hermes/templates/api-deployment.yaml
@@ -34,6 +34,10 @@ spec:
           volumeMounts:
             - mountPath: /etc/hermes
               name: config
+          resources:
+            requests:
+              memory: {{.Values.resources_requests_memory_api}}
+              cpu: {{.Values.resources_requests_cpu_api}}
           livenessProbe:
             httpGet:
               path: /v1/
