--- a/openstack/hermes/templates/elasticsearch-deployment.yaml
+++ b/openstack/hermes/templates/elasticsearch-deployment.yaml
@@ -67,3 +67,7 @@ spec:
           volumeMounts:
             - name: data
               mountPath: /data
+          resources:
+            requests:
+              memory: {{.Values.resources_requests_memory_es}}
+              cpu: {{.Values.resources_requests_cpu_es}}
