--- a/openstack/hermes/templates/kibana-deployment.yaml
+++ b/openstack/hermes/templates/kibana-deployment.yaml
@@ -49,4 +49,8 @@ spec:
           volumeMounts:
             - mountPath: /hermes-etc
               name: hermes-etc
+          resources:
+            requests:
+              memory: {{.Values.resources_requests_memory_ki}}
+              cpu: {{.Values.resources_requests_cpu_ki}}
 {{ end }}
