--- a/openstack/hermes/templates/logstash-deployment.yaml
+++ b/openstack/hermes/templates/logstash-deployment.yaml
@@ -52,6 +52,10 @@ spec:
           volumeMounts:
             - name: hermes-etc
               mountPath: /hermes-etc
+          resources:
+            requests:
+              memory: {{.Values.resources_requests_memory_ls}}
+              cpu: {{.Values.resources_requests_cpu_ls}}
 
         - name: logstash-exporter
           image: bonniernews/logstash_exporter:v0.1.2
