--- a/openstack/swift/values.yaml
+++ b/openstack/swift/values.yaml
@@ -19,8 +19,8 @@ image_version: DEFINED_BY_PIPELINE
 image_version_nginx: '1.14.0-alpine'
 
 # image versions of auxiliary images from other sources
-image_version_auxiliary_memcached: '1.4.33-alpine'
-image_version_auxiliary_memcached_exporter: 'v0.3.0'
+image_version_auxiliary_memcached: '1.5.10-alpine'
+image_version_auxiliary_memcached_exporter: 'v0.5.0'
 image_version_auxiliary_statsd_exporter: 'v0.5.0'
 
 # shared secrets and credentials
@@ -75,6 +75,10 @@ clusters:
     swift_service_password: DEFINED_IN_REGION_CHART
     sentry_dsn: DEFINED_IN_REGION_CHART
     replicas: 2
+
+    # Use a seperate memcached for token caching
+    # token_memcache: true
+
     # If there is a need to rate limit the nginx per cluster, that can be reached here
     # The limits apply to every replica within the deployment
     #rate_limit_connections: 1000
