add collector.data_metrics_skip_zero flag to reduce timeseries sprawl

--- a/openstack/limes/templates/configmap.yaml
+++ b/openstack/limes/templates/configmap.yaml
@@ -27,6 +27,7 @@ data:
     collector:
       metrics: :8080
       data_metrics: true
+      data_metrics_skip_zero: true
 
     clusters:
 {{ toYaml .Values.limes.clusters | indent 6 }}
