seperate token memcache is default, cache time default is 600s

--- a/openstack/swift/values.yaml
+++ b/openstack/swift/values.yaml
@@ -76,8 +76,9 @@ clusters:
     sentry_dsn: DEFINED_IN_REGION_CHART
     replicas: 2
 
-    # Use a seperate memcached for token caching
-    # token_memcache: true
+    # Use the swift cache for token caching, default is the seperate token memcached
+    # swift_token_cache: true
+    # token_cache_time: 600
 
     # If there is a need to rate limit the nginx per cluster, that can be reached here
     # The limits apply to every replica within the deployment
