Dont use NodePort for memcached

--- a/openstack/swift/templates/memcached-service.yaml
+++ b/openstack/swift/templates/memcached-service.yaml
@@ -10,9 +10,9 @@ metadata:
     prometheus.io/port: "9150"
 
 spec:
-  type: NodePort
   selector:
     name: memcached
   ports:
-    - name: memcache
-      port: 11211
+  - name: memcached
+    port: 11211
+    targetPort: memcached
