--- a/openstack/swift/templates/memcached-deployment.yaml
+++ b/openstack/swift/templates/memcached-deployment.yaml
@@ -26,7 +26,7 @@ spec:
           image: memcached:{{.Values.image_version_auxiliary_memcached}}
           imagePullPolicy: Always
           ports:
-            - name: memcache
+            - name: memcached
               containerPort: 11211
           command: ["memcached", "-m", "1024"]
         - name: metrics
