[nova] We have now a set of nova-compute-ironic hosts

--- a/openstack/nova/values.yaml
+++ b/openstack/nova/values.yaml
@@ -260,7 +260,7 @@ pgmetrics:
              usage: "GAUGE"
              description: "Maximum duration of state"
      openstack_compute_instance_launch:
-       query: "SELECT coalesce(host, 'N/A') AS host, project_id, uuid, vm_state, MAX(EXTRACT(epoch FROM launched_at - created_at)) AS time_taken_gauge FROM instances WHERE (launched_at IS NOT NULL AND launched_at >= now() - interval '24 hours') AND host!='nova-compute-ironic' GROUP BY host, project_id, uuid, vm_state"
+       query: "SELECT coalesce(host, 'N/A') AS host, project_id, uuid, vm_state, MAX(EXTRACT(epoch FROM launched_at - created_at)) AS time_taken_gauge FROM instances WHERE (launched_at IS NOT NULL AND launched_at >= now() - interval '24 hours') AND NOT host LIKE 'nova-compute-ironic%' GROUP BY host, project_id, uuid, vm_state"
        metrics:
          - host:
              usage: "LABEL"
@@ -278,7 +278,7 @@ pgmetrics:
              usage: "GAUGE"
              description: "Instances termination time in past 24hrs"
      openstack_compute_instance_termination:
-       query: "SELECT coalesce(host, 'N/A') AS host, project_id, uuid, vm_state, MAX(EXTRACT(epoch FROM updated_at - terminated_at)) AS time_taken_gauge FROM instances WHERE (terminated_at IS NOT NULL AND terminated_at >= now() - interval '24 hours') AND host!='nova-compute-ironic' GROUP BY host, project_id, uuid, vm_state"
+       query: "SELECT coalesce(host, 'N/A') AS host, project_id, uuid, vm_state, MAX(EXTRACT(epoch FROM updated_at - terminated_at)) AS time_taken_gauge FROM instances WHERE (terminated_at IS NOT NULL AND terminated_at >= now() - interval '24 hours') AND NOT host LIKE 'nova-compute-ironic%' GROUP BY host, project_id, uuid, vm_state"
        metrics:
          - host:
              usage: "LABEL"
@@ -296,7 +296,7 @@ pgmetrics:
              usage: "GAUGE"
              description: "Instances termination time in past 24hrs"
      openstack_compute_instance_created:
-       query: "SELECT coalesce(host, 'N/A') AS host, uuid, vm_state, COUNT(*) AS in_24hrs_gauge FROM instances WHERE (created_at >= now() - interval '24 hours') AND host!='nova-compute-ironic' AND deleted=0 GROUP BY host, uuid, vm_state"
+       query: "SELECT coalesce(host, 'N/A') AS host, uuid, vm_state, COUNT(*) AS in_24hrs_gauge FROM instances WHERE (created_at >= now() - interval '24 hours') AND NOT host LIKE 'nova-compute-ironic%' AND deleted=0 GROUP BY host, uuid, vm_state"
        metrics:
          - host:
              usage: "LABEL"
@@ -311,7 +311,7 @@ pgmetrics:
              usage: "GAUGE"
              description: "Instances created past 24hrs"
      openstack_ironic_instances_launch:
-       query: "SELECT project_id, uuid, node AS node_id, hostname, vm_state, MAX(EXTRACT(epoch FROM launched_at - created_at)) AS time_taken_gauge FROM instances WHERE (launched_at IS NOT NULL AND launched_at >= now() - interval '24 hours') AND host='nova-compute-ironic' GROUP BY project_id, uuid, vm_state, hostname, node"
+       query: "SELECT project_id, uuid, node AS node_id, hostname, vm_state, MAX(EXTRACT(epoch FROM launched_at - created_at)) AS time_taken_gauge FROM instances WHERE (launched_at IS NOT NULL AND launched_at >= now() - interval '24 hours') AND host LIKE 'nova-compute-ironic%' GROUP BY project_id, uuid, vm_state, hostname, node"
        metrics:
          - project_id:
              usage: "LABEL"
@@ -332,7 +332,7 @@ pgmetrics:
              usage: "GAUGE"
              description: "Nodes Launch time in past 24hrs"
      openstack_ironic_instances_termination:
-       query: "SELECT project_id, uuid, hostname, node AS node_id, vm_state, MAX(EXTRACT(epoch FROM updated_at - terminated_at)) AS time_taken_gauge FROM instances WHERE (terminated_at IS NOT NULL AND terminated_at >= now() - interval '24 hours') AND host='nova-compute-ironic' GROUP BY project_id, uuid, vm_state, hostname, node"
+       query: "SELECT project_id, uuid, hostname, node AS node_id, vm_state, MAX(EXTRACT(epoch FROM updated_at - terminated_at)) AS time_taken_gauge FROM instances WHERE (terminated_at IS NOT NULL AND terminated_at >= now() - interval '24 hours') AND host LIKE 'nova-compute-ironic%' GROUP BY project_id, uuid, vm_state, hostname, node"
        metrics:
          - project_id:
              usage: "LABEL"
@@ -353,7 +353,7 @@ pgmetrics:
              usage: "GAUGE"
              description: "Nodes termination time in past 24hrs"
      openstack_ironic_instances_created:
-       query: "SELECT uuid, hostname, node AS node_id, vm_state, COUNT(*) AS in_24hrs FROM instances WHERE (created_at >= now() - interval '24 hours') AND host='nova-compute-ironic' GROUP BY uuid, vm_state, hostname, node"
+       query: "SELECT uuid, hostname, node AS node_id, vm_state, COUNT(*) AS in_24hrs FROM instances WHERE (created_at >= now() - interval '24 hours') AND host LIKE 'nova-compute-ironic%' GROUP BY uuid, vm_state, hostname, node"
        metrics:
          - vm_state:
              usage: "LABEL"
@@ -371,7 +371,7 @@ pgmetrics:
              usage: "GAUGE"
              description: "Nodes created past 24hrs"
      openstack_ironic_instances:
-       query: "SELECT instances.uuid, instances.node AS node_id, instances.project_id, instances.hostname, instances.node AS node_id, instances.vm_state, coalesce(instance_types.name,'N/A') AS flavor_name, COUNT(*) AS gauge FROM instances JOIN instance_types ON instances.instance_type_id=instance_types.id where host='nova-compute-ironic' GROUP BY instances.vm_state, instances.project_id, instance_types.name, instances.uuid, instances.hostname, instances.node"
+       query: "SELECT instances.uuid, instances.node AS node_id, instances.project_id, instances.hostname, instances.node AS node_id, instances.vm_state, coalesce(instance_types.name,'N/A') AS flavor_name, COUNT(*) AS gauge FROM instances JOIN instance_types ON instances.instance_type_id=instance_types.id where host LIKE 'nova-compute-ironic%' GROUP BY instances.vm_state, instances.project_id, instance_types.name, instances.uuid, instances.hostname, instances.node"
        metrics:
          - uuid:
              usage: "LABEL"
